--- a/src/00-homepage/styles/ShopCardRow.scss
+++ b/src/00-homepage/styles/ShopCardRow.scss
@@ -1,5 +1,5 @@
 $main-yellow: #FAD249;
-$main-blue: #2B325C;
+$main-blue: #113f75;
 $main-text: #5E5E5E;
 
 $bgc-yellow: #FBFBF2;
@@ -8,6 +8,7 @@ $border-lg: $main-blue 3px solid;
 $border-sm: $main-blue 2px solid;
 
 $text-shadow: #E4E4E4 2px 2px;
+$text-shadow-lg: 3px 3px 0 $main-blue;
 $btn-shadow-lg: 6px 6px $main-blue;
 $btn-shadow-sm: 2px 2px $main-blue;
 $light-box-shadow: rgba(53, 53, 53, 0.75);
@@ -25,15 +26,86 @@ $border-radius-button: 8px;
     box-sizing: border-box;
 }
 
-.y-shop-card-wrap {
-    border: 1px solid brown;
-    padding: 10px;
+.y-shop-card-row {
+    .y-forum-head {
+        width: 100%;
+        height: auto;
+        padding: 10px;
+        overflow: hidden;
+        margin-bottom: 10px;
 
-}
+        p {
+            position: absolute;
+            font-size: 32px;
+            font-weight: bold;
+            color: white;
+            letter-spacing: 2px;
+            text-shadow: $text-shadow-lg;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%);
+            // transform: translateY(50%);
+        }
+    }
 
-@media (min-width: 391px) {
+    .y-shop-head {
+        position: relative;
+
+        img {
+            width: 100%;
+            border: $border-lg;
+            border-radius: $border-radius-card;
+
+        }
+
+        p {
+            
+
+        }
+    }
     
     .y-shop-card-wrap {
+        // border: 1px solid brown;
+        padding: 10px;
+    
+    }
+}
 
+
+@media (min-width: 391px) {
+    .y-shop-card-row {
+        .y-forum-head {
+            width: 100%;
+            height: auto;
+            padding: 10px;
+            overflow: hidden;
+            margin-bottom: 10px;
+
+            p {
+                position: absolute;
+                font-size: 32px;
+                font-weight: bold;
+                color: white;
+                text-shadow: 2px 2px 0 $main-blue;
+                top: 50%;
+                left: 50%;
+                transform: translateX(-50%);
+                // transform: translateY(50%);
+            }
+        }
+
+        .y-shop-head {
+            img {
+    
+            }
+    
+            p {
+    
+            }
+        }
+        
+        .y-recipe-card-wrap {
+            padding: 10px;
+        }
     }
 }
