--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,7 @@ $border-lg: $main-blue 3px solid;
 $border-sm: $main-blue 2px solid;
 
 $text-shadow: #e4e4e4 2px 2px;
+$text-shadow-lg: 3px 3px 0 $main-blue;
 $btn-shadow-lg: 6px 6px $main-blue;
 $btn-shadow-sm: 2px 2px $main-blue;
 $light-box-shadow: rgba(53, 53, 53, 0.75);
