--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -8,6 +8,7 @@ $border-lg: $main-blue 3px solid;
 $border-sm: $main-blue 2px solid;
 
 $text-shadow: #e4e4e4 2px 2px;
+$text-shadow-lg: 3px 3px 0 $main-blue;
 $btn-shadow-lg: 6px 6px $main-blue;
 $btn-shadow-sm: 2px 2px $main-blue;
 $light-box-shadow: rgba(53, 53, 53, 0.75);
@@ -34,8 +35,24 @@ $title-text:rgb(190, 174, 146);
 }
 
 .y-index-container {
-    min-width: $min-width;
+  min-width: $min-width;
   background-color: #fff;
+  position: relative;
+
+  .y-go-to-top {
+    position: fixed;
+    z-index: 300;
+    right: 8%;
+    bottom: 15%;
+    width: 32px;
+    height: 32px;
+    background-image: url('./../../logo-and-fonts/pixel-topNormal.svg');
+    
+  }
+
+  .y-go-to-top:hover {
+    background-image: url('./../../logo-and-fonts/pixel-topClick.svg');
+  }
 
   .y-section {
     // border: 1px solid black;
@@ -317,6 +334,9 @@ $title-text:rgb(190, 174, 146);
   }
 
   .y-section-forum {
+    position: relative;
+    padding-bottom: 40px;
+
     .y-section-forum-title {
       margin-bottom: 40px;
 
@@ -330,7 +350,7 @@ $title-text:rgb(190, 174, 146);
     }
 
     .y-section-forum-wrap {
-      outline: 1px solid #333;
+      // outline: 1px solid #333;
       max-width: 1320px;
       margin: 0 auto;
       padding: 20px;
@@ -339,7 +359,7 @@ $title-text:rgb(190, 174, 146);
       .y-forum-row-wrap {
         width: 100%;
         padding: 15px;
-        outline: 1px solid red;
+        // outline: 1px solid red;
         .y-forum-card-wrap {
         }
       }
@@ -353,14 +373,66 @@ $title-text:rgb(190, 174, 146);
       .y-official-row-wrap {
       }
     }
+
+    .y-forum-more-wrap {
+      width: 100%;
+
+      .y-forum-more-btn {
+        display: flex;
+        align-items: center;
+        background-color: $bgc-yellow;
+        border-radius: $border-radius-button;
+        border: $border-lg;
+        padding: 10px 15px;
+        width: 180px;
+
+        .y-forum-more-icon {
+            width: 26px;
+            height: 26px;
+            
+          img {
+            width: 100%;
+            object-fit: cover;
+            vertical-align: middle;
+          }
+        }
+        
+        p {
+          font-size: 28px;
+          font-weight: bold;
+          text-shadow: $text-shadow;
+        }
+      }
+    }
   }
 
   .y-wave-wrap {
+  }
+  
+  .y-section-news-bottom {
+    display: flex;
+    .y-section-news-second {
+      position: relative;
+      width: 100%;
+      height: 24px;
+      overflow: hidden;
+      background-color: $bgc-yellow;
+    }
   }
 }
 
 @media (min-width: 391px) {
   .y-index-container {
+    .y-go-to-top {
+      right: 12%;
+      bottom: 20%;
+      width: 60px;
+      height: 60px;      
+    }
+  
+    .y-go-to-top:hover {
+    }
+    
     .y-section {
       // border: 1px solid black;
       width: 100%;
@@ -658,7 +730,7 @@ $title-text:rgb(190, 174, 146);
       }
 
       .y-section-forum-wrap {
-        outline: 1px solid #333;
+        // outline: 1px solid #333;
         max-width: 1320px;
         margin: 0 auto;
         padding: 20px;
@@ -667,7 +739,7 @@ $title-text:rgb(190, 174, 146);
         .y-forum-row-wrap {
           width: 100%;
           padding: 15px;
-          outline: 1px solid red;
+          // outline: 1px solid red;
           .y-forum-card-wrap {
           }
         }
@@ -682,14 +754,34 @@ $title-text:rgb(190, 174, 146);
         }
         
       }
+
+      .y-forum-more-wrap {
+        .y-forum-more-btn {
+
+          .y-forum-more-icon {
+            
+            img {
+  
+            }
+          }
+          
+          
+          p {
+            
+          }
+        }
+      }
     }
 
+
     .y-wave-wrap {
+    }
+
+    .y-section-news-bottom {
+      .y-section-news-second {
+        height: 30px;
+      }
     }
   }
 }
 
-.y-section-merch {
-  height: 500px;
-  background-color: $main-yellow;
-}
