--- a/src/00-homepage/styles/OfficialPost.scss
+++ b/src/00-homepage/styles/OfficialPost.scss
@@ -26,15 +26,17 @@ $border-radius-button: 8px;
 }
 
 .y-official-card-container {
-    border: $border-sm;
+    // border: $border-sm;
     padding: 20px;
-    
+    border-radius: $border-radius-card;
+    margin-bottom: 30px;
+
     .y-official-top {
 
         .y-official-author {
 
             .y-official-author-name {
-
+                letter-spacing: 2px;
             }
         }
 
@@ -49,7 +51,7 @@ $border-radius-button: 8px;
     
     .y-official-text {
         p {
-
+            
         }
     }
 
@@ -59,6 +61,14 @@ $border-radius-button: 8px;
             width: 100%;
         }
     }
+}
+
+.y-official-card-container:nth-child(2n) {
+    background-color: $main-yellow;
+}
+
+.y-official-card-container:nth-child(2n+1) {
+    border: $border-sm;
 }
 
 @media (min-width: 391px) {
@@ -113,5 +123,11 @@ $border-radius-button: 8px;
                 
             }
         }
+    }
+
+    .y-official-card-container:nth-child(2n) {
+    }
+
+    .y-official-card-container:nth-child(2n+1) {
     }
 }
