--- a/src/03-shop/styles/03-shop-home.scss
+++ b/src/03-shop/styles/03-shop-home.scss
@@ -3,7 +3,7 @@ $main-Blue: #113f75;
 $main-yellow: #fad249;
 $cate-btn: #fce38c;
 $main-text: #5e5e5e;
-$title-text:rgb(190, 174, 146);
+$title-text: rgb(190, 174, 146);
 
 .r-shop-home-container {
   background: url(./../../../public/03-shop-img/food_cola_s_01.png) 280px 200px/10%
@@ -24,7 +24,7 @@ $title-text:rgb(190, 174, 146);
         width: 40%;
         margin-left: auto;
         p {
-          font-size:48px;
+          font-size: 48px;
           font-weight: 700;
           letter-spacing: 0.2rem;
           line-height: 3.5rem;
@@ -90,29 +90,37 @@ $title-text:rgb(190, 174, 146);
       animation: animate 3.5s linear infinite;
       z-index: 100;
       animation-delay: 0.3s;
-  
+
       @keyframes animate {
         0% {
           background-position-x: 0px;
         }
-  
+
         100% {
           background-position-x: 1920px;
         }
       }
     }
   }
-  .r-shop-home-carousel-title{
+  .r-shop-home-carousel-title {
     padding: 60px 0 30px 0;
     background-color: $main-yellow;
     text-align: center;
-    p{
+    .r-shop-home-carousel-p {
       font-size: 60px;
       font-weight: 700;
-      letter-spacing: .2rem;
+      letter-spacing: 0.2rem;
       color: #000;
       -webkit-text-stroke: 1px #000;
-      background-image: linear-gradient(135deg, transparent 35%, #000 35%, #000 50%, transparent 50%, transparent 85%, #000 85%);
+      background: linear-gradient(
+        135deg,
+        transparent 35%,
+        #000 35%,
+        #000 50%,
+        transparent 50%,
+        transparent 85%,
+        #000 85%
+      );
       background-size: 4px 4px;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -159,13 +167,13 @@ $title-text:rgb(190, 174, 146);
   .r-shop-slider {
     padding-bottom: 60px;
     background-color: $main-yellow;
-    .r-shop-home-slider-inner1{
-        span{
-          font-size: 28px;
-          font-weight: 700;
-          background-color: $cate-btn;
-          padding: 10px 10px 10px 60px;
-        }
+    .r-shop-home-slider-inner1 {
+      span {
+        font-size: 28px;
+        font-weight: 700;
+        background-color: $cate-btn;
+        padding: 10px 10px 10px 60px;
+      }
     }
     .r-shop-slider-traintop {
       width: 75%;
@@ -182,7 +190,7 @@ $title-text:rgb(190, 174, 146);
         margin: 20px 60px 10px 0;
         position: relative;
         box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.598);
-        border:5px solid #000;
+        border: 5px solid #000;
         img {
           width: 100%;
           height: 100%;
@@ -202,23 +210,22 @@ $title-text:rgb(190, 174, 146);
           align-items: center;
           z-index: 10;
           backdrop-filter: blur(15px);
-          box-shadow: 0 -10px 10px rgba(0,0,0,0.1);
-          border: 1px solid rgba(255,255,255,0.2);
+          box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
+          border: 1px solid rgba(255, 255, 255, 0.2);
           padding-top: 30px;
-          transition: .5s;
+          transition: 0.5s;
           p {
             font-size: 30px;
             font-weight: 700;
             color: #fff;
           }
-          span{
+          span {
             color: #fff;
           }
         }
-        
       }
-      .r-shop-slider-img-wrap:hover{
-        .r-shop-slider-content{
+      .r-shop-slider-img-wrap:hover {
+        .r-shop-slider-content {
           bottom: -40px;
         }
       }
