add AboutUs & NewEvents

--- a/src/00-homepage/styles/AboutUs.scss
+++ b/src/00-homepage/styles/AboutUs.scss
@@ -7,7 +7,7 @@ main {
   letter-spacing: 2px
 }
 
-$main-blue: #2B325C;
+$main-blue: #113f75;
 $main-yellow: #FAD249;
 $main-text: #5E5E5E;
 $secondary-blue: #113F75;
