--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -30,6 +30,31 @@ $cate-btn: #fce38c;
 $main-text: #5e5e5e;
 $title-text:rgb(190, 174, 146);
 
+// ariel's variables
+main {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  letter-spacing: 2px
+}
+
+$secondary-blue: #113F75;
+$secondary-yellow: #FEF3DA;
+$green: #53B2A8;
+$red: #ED4743;
+$text-shadow: #E4E4E4;
+$base-line-eight: 10px;
+$main-border: 3px solid #113F75;
+$main-border-radius: 8px;
+
+%a-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -84,6 +109,7 @@ $title-text:rgb(190, 174, 146);
 
   .y-section-carousel {
     background-color: $main-yellow;
+    padding: 30px;
 
     .y-carousel-wrap {
     }
@@ -333,6 +359,170 @@ $title-text:rgb(190, 174, 146);
     }
   }
 
+  .y-section-about {
+    .a-video {
+      text-align: center;
+    }
+    .a-videoWrapper {
+      position: relative;
+      width: 800px;
+      margin: auto;
+    }
+    video {
+      max-width: 100%;
+      // display: block;
+    }
+    .a-aboutUs {
+      position: absolute;
+      left: -30px;
+      top: 0px;
+      z-index: 1;
+      background-color: $secondary-yellow;
+      border-radius: $main-border-radius;
+      width: 170px;
+      height: 50px;
+      @extend %a-flex
+    }
+
+  }
+
+  .y-section-event {
+    @function line($count:1) {
+      @return $base-line-eight * $count;
+    }
+    %a-flex {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+      %h1 {
+          font-size: 48px;
+      }
+      %h2 {
+          font-size: 36px;
+      }
+      %h3 {
+          font-size: 20px;
+          color: #2B325C;
+          font-weight: 500;
+      }
+      %h4 {
+          font-size: 18px;
+      }
+      %p{
+          font-size: 16px;
+      }
+    img {
+      padding-top: 20px;
+    }
+    
+    .a-eventBanner {
+    display: flex;
+    justify-content: center;
+    .a-eventWrapper {
+      width: 800px;
+      background-color: $secondary-blue;
+      display: flex;
+      justify-content: center;
+      position: relative;
+        .a-newEvent {
+          background-color: $secondary-yellow;
+          border-radius: $main-border-radius;
+          width: 170px;
+          height: 50px;
+          @extend %a-flex;
+          position: absolute;
+          top: 0;
+          left: -30px;
+          z-index: 1;
+        }
+        .a-eventText {
+          width: 140px;
+          margin-top: line(6.5);
+          .a-whatFun {
+            color: #fff;
+            font-weight: 900;
+            letter-spacing: 3px; 
+          }
+        }
+      .a-eventContent {
+        @extend %a-flex;
+        background-color: #fff;
+        height: 230px;
+        margin: 20px 5px 20px 0;
+      .a-calendarWrapper {
+        @extend %a-flex;
+        flex-direction: column;
+        background-color: $text-shadow;
+        width: 150px;
+        height: 180px;
+        margin-left: 10px;
+        .a-imgWrapper img{
+          width: 43px;
+          margin: 0 0 5px 0;
+          padding: 0;
+        }
+        .a-dateWrapper {
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          width: 100px;
+          height: 90px;
+          color: $main-blue;
+          background-color: #fff;
+          border-radius: $main-border-radius;
+        }
+        .a-month {
+          margin: 0;
+        }
+        .a-day {
+          @extend %h2;
+          margin: 0px;
+        }
+      }
+      .a-eventContentWrapper {
+        display: flex;
+        flex-direction: column;
+      .a-event {
+        @extend %a-flex;
+        // height: 100px;
+      }
+      .a-eventDayWrapper h4 {
+        @extend %h4;
+        @extend %a-flex;
+        margin: 0px 8px;
+        color: $main-blue;
+      }
+      .a-eventImgWrapper {
+        width: 130px;
+        overflow: hidden;
+      }
+      .a-eventImgWrapper img {
+        width: 100%;
+        object-fit: cover;
+      }
+      .a-eventName h4{
+        @extend %h4;
+        margin: 3px;
+        color: $main-blue;
+      }
+      .a-eventButton {
+        width: 100px;
+        height: 40px;
+        @extend %a-flex;
+        background-color: $main-yellow;
+        color: $main-blue;
+        border: $main-border;
+        border-radius:$main-border-radius;
+        margin: 10px;
+      }
+    }
+    }
+    }
+    }
+  }
+
   .y-section-forum {
     position: relative;
     padding-bottom: 40px;
@@ -467,7 +657,7 @@ $title-text:rgb(190, 174, 146);
       .y-carousel-wrap {
         margin: 0 auto;
         max-width: 1040px;
-        border: $border-lg;
+        // border: $border-lg;
       }
     }
 
@@ -715,6 +905,169 @@ $title-text:rgb(190, 174, 146);
       }
     }
     
+    .y-section-about {
+      .a-video {
+        text-align: center;
+      }
+      .a-videoWrapper {
+        position: relative;
+        width: 800px;
+        margin: auto;
+      }
+      video {
+        max-width: 100%;
+        // display: block;
+      }
+      .a-aboutUs {
+        position: absolute;
+        left: -30px;
+        top: 0px;
+        z-index: 1;
+        background-color: $secondary-yellow;
+        border-radius: $main-border-radius;
+        width: 170px;
+        height: 50px;
+        @extend %a-flex
+      }
+  
+    }
+  
+    .y-section-event {
+      @function line($count:1) {
+        @return $base-line-eight * $count;
+      }
+      %a-flex {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      
+        %h1 {
+            font-size: 48px;
+        }
+        %h2 {
+            font-size: 36px;
+        }
+        %h3 {
+            font-size: 20px;
+            color: #2B325C;
+            font-weight: 500;
+        }
+        %h4 {
+            font-size: 18px;
+        }
+        %p{
+            font-size: 16px;
+        }
+      img {
+        padding-top: 20px;
+      }
+      
+      .a-eventBanner {
+      display: flex;
+      justify-content: center;
+      .a-eventWrapper {
+        width: 800px;
+        background-color: $secondary-blue;
+        display: flex;
+        justify-content: center;
+        position: relative;
+          .a-newEvent {
+            background-color: $secondary-yellow;
+            border-radius: $main-border-radius;
+            width: 170px;
+            height: 50px;
+            @extend %a-flex;
+            position: absolute;
+            top: 0;
+            left: -30px;
+            z-index: 1;
+          }
+          .a-eventText {
+            width: 140px;
+            margin-top: line(6.5);
+            .a-whatFun {
+              color: #fff;
+              font-weight: 900;
+              letter-spacing: 3px; 
+            }
+          }
+        .a-eventContent {
+          @extend %a-flex;
+          background-color: #fff;
+          height: 230px;
+          margin: 20px 5px 20px 0;
+        .a-calendarWrapper {
+          @extend %a-flex;
+          flex-direction: column;
+          background-color: $text-shadow;
+          width: 150px;
+          height: 180px;
+          margin-left: 10px;
+          .a-imgWrapper img{
+            width: 43px;
+            margin: 0 0 5px 0;
+            padding: 0;
+          }
+          .a-dateWrapper {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            width: 100px;
+            height: 90px;
+            color: $main-blue;
+            background-color: #fff;
+            border-radius: $main-border-radius;
+          }
+          .a-month {
+            margin: 0;
+          }
+          .a-day {
+            @extend %h2;
+            margin: 0px;
+          }
+        }
+        .a-eventContentWrapper {
+          display: flex;
+          flex-direction: column;
+        .a-event {
+          @extend %a-flex;
+          // height: 100px;
+        }
+        .a-eventDayWrapper h4 {
+          @extend %h4;
+          @extend %a-flex;
+          margin: 0px 8px;
+          color: $main-blue;
+        }
+        .a-eventImgWrapper {
+          width: 130px;
+          overflow: hidden;
+        }
+        .a-eventImgWrapper img {
+          width: 100%;
+          object-fit: cover;
+        }
+        .a-eventName h4{
+          @extend %h4;
+          margin: 3px;
+          color: $main-blue;
+        }
+        .a-eventButton {
+          width: 100px;
+          height: 40px;
+          @extend %a-flex;
+          background-color: $main-yellow;
+          color: $main-blue;
+          border: $main-border;
+          border-radius:$main-border-radius;
+          margin: 10px;
+        }
+      }
+      }
+      }
+      }
+    }
 
     .y-section-forum {
       .y-section-forum-title {
