--- a/src/01-cart/styles/CartItemsList.scss
+++ b/src/01-cart/styles/CartItemsList.scss
@@ -94,7 +94,7 @@ $border-radius-button: 8px;
 
             p {
                 text-align: center;
-                font-size: 14px;
+                font-size: 18px;
                 font-weight: bold;
                 color: $main-blue;
             }
@@ -140,7 +140,7 @@ $border-radius-button: 8px;
                 width: 13%;
 
             p {
-                font-size: 14px;
+                font-size: 18px;
                 text-align: center;
                 font-weight: bold;
             }
@@ -151,7 +151,7 @@ $border-radius-button: 8px;
             height: 100%;
             display: flex;
             flex-direction: column;
-            // justify-content: space-between;
+            justify-content: space-between;
             align-items: center;
             
             .y-Cart-WishListBtn-wrap {
@@ -232,7 +232,8 @@ $border-radius-button: 8px;
                 align-items: center;
     
                 select {
-                    width: 100px;
+                    margin: 0 auto;
+                    width: 80px;
                     padding: 8px 16px;
                     padding-right: 36px;
                     position: relative;
@@ -277,7 +278,7 @@ $border-radius-button: 8px;
                 align-items: center;
                 
                 .y-Cart-WishListBtn-wrap {
-        
+
                 }
         
                 .y-Cart-RemoveItemBtn-wrap {
