--- a/src/01-cart/styles/WishListBtn.scss
+++ b/src/01-cart/styles/WishListBtn.scss
@@ -10,6 +10,8 @@ $border-lg: $main-blue 3px solid;
 $border-sm: $main-blue 2px solid;
 $border-white-lg: #fff 3px solid;
 $border-white-sm: #fff 2px solid;
+$border-yellow-lg: $main-yellow 3px solid;
+$border-yellow-sm: $main-yellow 2px solid;
 
 
 $text-shadow: #E4E4E4 2px 2px;
@@ -20,7 +22,6 @@ $light-box-shadow: rgba(53, 53, 53, 0.75);
 $min-width: 390px;
 $min-height: 400px;
 $wave-height: 40px;
-$progress-width: 33%;
 
 $font-family: Arial, Helvetica, sans-serif;
 
@@ -32,8 +33,8 @@ $border-radius-button: 8px;
 }
 .y-wish-list-border {
     border-radius: $border-radius-button;
-    border: $border-white-sm;
-    background-color: $btn-pink;
+    border: none;
+    background-color: $main-yellow;
     padding: 2px 20px;
     display: none;
 
@@ -49,7 +50,7 @@ $border-radius-button: 8px;
     }
     
     .y-wish-list {
-        color: #fff;
+        color: $main-blue;
         font-size: 14px;
         font-weight: bold;
         letter-spacing: 2px;
@@ -62,7 +63,7 @@ $border-radius-button: 8px;
         justify-content: center;
         align-items: center;
         border-radius: $border-radius-card;
-        border: $border-white-lg;
+        // border: $border-yellow-lg;
         padding: 8px 35px;
     
         .y-wish-list-icon {
