--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
+$font-family: Arial, Helvetica, sans-serif;
+
 // 00-homepage & 01-cart
 $main-yellow: #fad249;
 $main-blue: #113f75;
@@ -7,8 +9,16 @@ $bgc-yellow: #fbfbf2;
 
 $border-lg: $main-blue 3px solid;
 $border-sm: $main-blue 2px solid;
+$border-white-lg: #fff 3px solid;
+$border-white-sm: #fff 2px solid;
+$border-yellow-lg: $main-yellow 3px solid;
+$border-yellow-sm: $main-yellow 2px solid;
 
-$text-shadow: #e4e4e4 2px 2px;
+$btn-red: #ED4743;
+$btn-green: #CCDE73;
+$btn-pink: #FF9696;
+
+$text-shadow-sm: #e4e4e4 2px 2px;
 $text-shadow-lg: 3px 3px 0 $main-blue;
 $btn-shadow-lg: 6px 6px $main-blue;
 $btn-shadow-sm: 2px 2px $main-blue;
@@ -17,8 +27,6 @@ $light-box-shadow: rgba(53, 53, 53, 0.75);
 $min-width: 390px;
 $min-height: 400px;
 $wave-height: 40px;
-
-$font-family: Arial, Helvetica, sans-serif;
 
 $border-radius-card: 10px;
 $border-radius-button: 8px;
