--- a/src/04-product/components/style/RecommendCard.scss
+++ b/src/04-product/components/style/RecommendCard.scss
@@ -1,4 +1,3 @@
-
 main {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -19,7 +18,11 @@ $text-shadow: #E4E4E4;
 $base-line-eight: 10px;
 $main-border: 3px solid #113F75;
 $main-border-radius: 8px;
-
+%a-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 @function line($count:1) {
     @return $base-line-eight * $count;
 }
@@ -40,39 +43,39 @@ $main-border-radius: 8px;
 %p{
     font-size: 16px;
 }
-%a-flex {
+
+.a-recommendText {
     display: flex;
     justify-content: center;
-    align-items: center;
+    background-color: $main-yellow;
+    @extend %h3;
+    @extend %a-flex;
+    height: 100px;
+    padding-bottom: 30px;
+}
+.a-recommendText img {
+    width: 35px;
 }
 .a-productRecommend {
     @extend %a-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: $main-yellow;
     height: 250px;
     padding-bottom: 55px;
 }
-.a-productRecommend h3 {
-    @extend %h3
-}
 .a-productRecommend  img {
     width: 30px;
 }
-.a-recommendText {
-    display: flex;
-    padding: 0 10px;
+.a-recommendImgWrapper{
+    @extend %a-flex;
 }
 .a-recommendWrapper {
-    @extend %a-flex;
-    flex-wrap: wrap;
+    display: flex;
 }
 .a-recommendWrapper img {
-    width: 140px;
-    height: 140px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border: 3px solid #113F75;
     border-radius: 8px;
-    margin: 20px 15px;
+    margin: 20px 20px;
 }
