--- a/src/03-shop/styles/03-shop-home.scss
+++ b/src/03-shop/styles/03-shop-home.scss
@@ -200,10 +200,9 @@ $title-text: rgb(190, 174, 146);
           position: absolute;
           text-align: center;
           letter-spacing: 0.1rem;
-          line-height: 2rem;
           width: 100%;
           height: 150px;
-          bottom: -150px;
+          bottom: -40px;
           display: flex;
           flex-direction: column;
           // justify-content: flex-start;
@@ -212,23 +211,32 @@ $title-text: rgb(190, 174, 146);
           backdrop-filter: blur(15px);
           box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
           border: 1px solid rgba(255, 255, 255, 0.2);
-          padding-top: 30px;
-          transition: 0.5s;
+          // padding-top: 30px;
+          // transition: 0.5s;
           p {
             font-size: 30px;
             font-weight: 700;
             color: #fff;
+            line-height: 4rem;
           }
-          span {
-            color: #fff;
+          .r-shop-slider-content-span{
+            padding-top: 5px;
+            span {
+              display: inline;
+              font-size: 20px;
+              font-weight: 700;
+              color: $cate-btn;
+              letter-spacing: .5rem;
+            }
           }
+          
         }
       }
-      .r-shop-slider-img-wrap:hover {
-        .r-shop-slider-content {
-          bottom: -40px;
-        }
-      }
+      // .r-shop-slider-img-wrap:hover {
+      //   .r-shop-slider-content {
+      //     bottom: -40px;
+      //   }
+      // }
     }
 
     .r-shop-slider-traintop::-webkit-scrollbar-track {
