--- a/src/06-event/components/06-event-comp-left.scss
+++ b/src/06-event/components/06-event-comp-left.scss
@@ -47,9 +47,19 @@ body {
   position: fixed;
   width: 70%;
   display: flex;
+  @media (max-width: 390px) {
+    position: static;
+    display: flex;
+    flex-direction: column;
+  }
+
   .j-left {
     @include size(250px, 100vh);
     background-color: $colorYellow;
+    @media (max-width: 390px) {
+      @include size(100vw, 100px);
+      outline: 2px black solid;
+    }
     ul {
       @include size(100%, 100%);
       padding: 0;
@@ -58,18 +68,31 @@ body {
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
+      @media (max-width: 390px) {
+        display: flex;
+        flex-direction: row;
+      }
+
       li {
+        img {
+          @media (max-width: 390px) {
+            display: none;
+          }
+        }
         div {
           width: 240px;
           font-size: 2.3rem;
           color: $colorWhite;
           position: relative;
           text-align: center;
-
-          
+          @media (max-width: 390px) {
+            width: 20px;
+            font-size: 1rem;
+            outline: 1px solid black;
+          }
         }
         div.active {
-          color: $colorBlue !important;
+          color: $colorBlue;
           &::after {
             content: '';
             background-image: url(../svg/tada.svg);
@@ -80,18 +103,27 @@ body {
             width: 250px;
             height: 100px;
             padding: 0;
+            @media (max-width: 390px) {
+              outline: 2px solid black;
+              background-image: url(../svg/tada.svg);
+              background-size: 100px 50px;
+              position: absolute;
+              top: -8px;
+              left: -70px;
+              width: 100px;
+              height: 50px;
+            }
           }
         }
       }
     }
   }
-  
+
   .j-wave {
     margin-left: -2px;
     width: 50%;
     @media (max-width: 390px) {
-      transform: rotate(90%);
+      transform: rotate(90deg);
     }
   }
 }
-
