--- a/src/06-event/styles/06-event-00-Render.scss
+++ b/src/06-event/styles/06-event-00-Render.scss
@@ -4,6 +4,9 @@
     flex-direction: row;
     justify-content: space-between;
     @media (max-width: 390px){
-      
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
   }
