--- a/src/02-forum/styles/Side_bar.scss
+++ b/src/02-forum/styles/Side_bar.scss
@@ -19,12 +19,23 @@ $main-text:#5C5C5C;
     .p-buttonWrap{
         display: flex;
         flex-direction: column;
-        align-items: center;  
+        align-items: center; 
+        
      .p-imgWrap{
         width: 50px;
         height: 50px;
         border-radius: 30%;
         background-color:#FFE6B4 ;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 15px 0 0 0;
+    }
+    .p-activPage{
+        width: 50px;
+        height: 50px;
+        border-radius: 30%;
+        background-color:$main-blue ;
         display: flex;
         align-items: center;
         justify-content: center;
