temp. remove @import scss & routes

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 // 共用變數、元件樣式
-@import "./styles/variables.scss";
-@import "./styles/global.scss";
-@import "./styles/Menu.scss";
+// @import "./styles/variables.scss";
+// @import "./styles/global.scss";
+// @import "./styles/Menu.scss";
 
 // 各主頁scss連結
-@import "./00-homepage/styles/Homepage.scss";
+// @import "./00-homepage/styles/Homepage.scss";
