--- a/src/00-homepage/styles/RecipePost.scss
+++ b/src/00-homepage/styles/RecipePost.scss
@@ -113,10 +113,11 @@ $border-radius-button: 8px;
                 letter-spacing: 5px;
                 line-height: 1.4;
                 font-size: 16px;
-
-                // overflow: hidden;
-                // text-overflow: ellipsis;
-                // white-space: nowrap;
+                text-align: justify;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 3;
+                overflow: hidden;
             }
         }
 
