--- a/src/01-cart/styles/CartInfo.scss
+++ b/src/01-cart/styles/CartInfo.scss
@@ -13,7 +13,7 @@ $light-box-shadow: rgba(53, 53, 53, 0.75);
 $min-width: 390px;
 $min-height: 400px;
 $wave-height: 40px;
-$progress-width: 100%;
+$progress-width: 66%;
 
 $font-family: Arial, Helvetica, sans-serif;
 
@@ -176,12 +176,17 @@ $border-radius-button: 8px;
         .y-Cart-sections {
             width: 100%;
 
-            
+            .y-Cart-tab {
+                        
+            }
+    
+            .y-Cart-main {
+                border: $border-sm;
+
+            }
         }
 
-        .y-Cart-tab {
-                        
-        }
+
 
         .y-Cart-details {
 
@@ -419,7 +424,7 @@ $border-radius-button: 8px;
                 }
 
                 .y-Cart-main {
-
+                    border: $border-lg;
                 }
             }
 
