edit rwd for Homepage

--- a/src/00-homepage/styles/RecipeCardRow.scss
+++ b/src/00-homepage/styles/RecipeCardRow.scss
@@ -29,17 +29,17 @@ $border-radius-button: 8px;
     .y-forum-head {
         width: 100%;
         height: auto;
-        padding: 10px;
+        padding: 5px;
         overflow: hidden;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
 
         p {
             position: absolute;
-            font-size: 32px;
+            font-size: 18px;
             font-weight: bold;
             color: white;
             letter-spacing: 2px;
-            text-shadow: $text-shadow-lg;
+            text-shadow: $text-shadow;
             top: 50%;
             left: 50%;
             transform: translateX(-50%);
@@ -53,7 +53,7 @@ $border-radius-button: 8px;
         img {
             width: 100%;
             object-fit: cover;
-            border: $border-lg;
+            border: $border-sm;
             border-radius: $border-radius-card;
 
         }
@@ -66,7 +66,7 @@ $border-radius-button: 8px;
 
     .y-recipe-card-wrap {
         // border: 1px solid brown;
-        padding: 10px;
+        padding: 5px;
     }
     
 }
@@ -76,28 +76,20 @@ $border-radius-button: 8px;
 @media (min-width: 391px) {
     .y-recipe-card-row {
         .y-forum-head {
-            width: 100%;
-            height: auto;
             padding: 10px;
-            overflow: hidden;
             margin-bottom: 10px;
 
             p {
-                position: absolute;
                 font-size: 32px;
-                font-weight: bold;
-                color: white;
-                letter-spacing: 2px;
                 text-shadow: $text-shadow-lg;
-                top: 50%;
-                left: 50%;
-                transform: translateX(-50%);
             }
         }
 
         .y-recipe-head {
             img {
-    
+                border: $border-sm;
+            border-radius: $border-radius-card;
+
             }
     
             p {
