--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -112,18 +112,32 @@ $main-border-radius: 8px;
     padding: 30px;
 
     .y-carousel-wrap {
+    
+        .y-carousel-block-yellow {
+          p {
+
+          }
+        }
+        .y-carousel-block-blue {
+          .y-block-bg {
+            p {
+
+            }
+          }
+        }
     }
+
   }
 
   .y-section-search {
     .r-shop-home-container {
-      background: url(./../../../public/03-shop-img/food_cola_s_01.png) 280px
-          200px/10% no-repeat,
-        url(./../../../public/03-shop-img/food_ramen_01.png) 1700px 700px/8%
+      background: url(./../../../public/03-shop-img/food_cola_s_01.png) 290px
+          120px/13% no-repeat,
+        url(./../../../public/03-shop-img/food_ramen_01.png) 150px 60px/15%
           no-repeat,
-        url(./../../../public/03-shop-img/food_pizza_01.png) 750px 80px/15%
+        url(./../../../public/03-shop-img/food_pizza_01.png) 220px 240px/15%
           no-repeat,
-        url(./../../../public/03-shop-img/food_french_fries_01.png) 50px 550px/20%
+        url(./../../../public/03-shop-img/food_french_fries_01.png) 30px 580px/20%
           no-repeat;
 
       .r-shop-home-main {
@@ -132,17 +146,18 @@ $main-border-radius: 8px;
           display: flex;
           align-items: center;
           .r-shop-home-main-text {
-            width: 40%;
-            margin-left: auto;
+            width: 100%;
+            max-width: 240px;
+            margin-left: 30px;
             p {
-              font-size: 48px;
+              font-size: 24px;
               font-weight: 700;
               letter-spacing: 0.2rem;
-              line-height: 3.5rem;
+              line-height: 2rem;
               padding-bottom: 20px;
             }
             span {
-              font-size: 24px;
+              font-size: 20px;
               font-weight: 700;
               letter-spacing: 0.2rem;
               color: $main-text;
@@ -150,17 +165,18 @@ $main-border-radius: 8px;
           }
           .r-shop-home-main-btn {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            height: 60px;
-            border: 3px solid #000;
-            border-radius: 15px;
-            margin-top: 80px;
-            box-shadow: 10px 5px 0 #333;
+            height: 45px;
+            border: $border-sm;
+            border-radius: 10px;
+            margin-top: 40px;
+            padding: 0 12px;
+            box-shadow: 10px 5px 0 $main-Blue;
             input {
-              font-size: 20px;
+              font-size: 16px;
               border: none;
-              margin-right: 5px;
+              outline: none;
             }
             input:focus {
               outline-style: none;
@@ -168,24 +184,26 @@ $main-border-radius: 8px;
             a {
               text-decoration: none;
               i {
-                font-size: 24px;
+                font-size: 20px;
                 color: $main-blue;
               }
             }
           }
         }
         .r-shop-home-main-visual {
-          width: 60%;
-          height: 80vh;
-          background: url('./../../../public/03-shop-img/potato.png') 0 0
+          width: 10%;
+          height: 360px;
+          background: url('./../../../public/03-shop-img/potato.png') 50% 50%/cover
             no-repeat;
-          margin-top: 120px;
+          margin-top: 40px;
         }
       }
     }
   }
 
   .y-section-merch {
+    max-width: 360px;
+    overflow: hidden;
     .r-shop-home-carousel {
       .r-wave-section {
         width: 100%;
@@ -361,7 +379,8 @@ $main-border-radius: 8px;
 
   .y-section-about {
     margin-top: 20px;
-
+    max-width: 360px;
+    overflow: hidden;
     .a-video {
       text-align: center;
     }
@@ -533,31 +552,31 @@ $main-border-radius: 8px;
 
   .y-section-forum {
     position: relative;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
+    width: 100%;
 
     .y-section-forum-title {
-      margin-bottom: 40px;
+      margin-bottom: 0px;
 
       p {
-        font-size: 36px;
+        font-size: 20px;
         font-weight: bold;
-        letter-spacing: 4px;
+        letter-spacing: 3px;
         color: $main-text;
         text-align: center;
       }
     }
 
     .y-section-forum-wrap {
-      // outline: 1px solid #333;
-      max-width: 1320px;
+      width: 100%;
+      // max-width: 360px;
       margin: 0 auto;
-      padding: 20px;
+      padding: 5px;
       display: flex;
       justify-content: space-between;
       .y-forum-row-wrap {
         width: 100%;
-        padding: 15px;
-        // outline: 1px solid red;
+        padding: 5px;
         .y-forum-card-wrap {
         }
       }
@@ -585,13 +604,13 @@ $main-border-radius: 8px;
         background-color: $main-orange;
         border-radius: $border-radius-button;
         border: $border-lg;
-        padding: 10px 15px;
-        width: 180px;
+        padding: 4px 8px;
+        width: 10px;
 
         .y-forum-more-icon {
-            width: 24px;
-            height: 24px;
-            margin-right: 8px;
+            width: 20px;
+            height: 20px;
+            margin-right: 4px;
             
           img {
             width: 100%;
@@ -601,7 +620,7 @@ $main-border-radius: 8px;
         }
         
         p {
-          font-size: 28px;
+          font-size: 14px;
           font-weight: bold;
           text-shadow: $text-shadow;
           color: white;
@@ -672,13 +691,28 @@ $main-border-radius: 8px;
         margin: 0 auto;
         max-width: 1040px;
         // border: $border-lg;
+        .y-carousel-block-yellow {
+          p {
+
+          }
+        }
+        .y-carousel-block-blue {
+          .y-block-bg {
+            p {
+              
+            }
+          }
+        }
       }
     }
 
     .y-section-search {
+      max-width: 360px;
+      overflow: hidden;
+
         .r-shop-home-container {
           background: url(./../../../public/03-shop-img/food_cola_s_01.png) 280px
-              200px/10% no-repeat,
+              100px/10% no-repeat,
             url(./../../../public/03-shop-img/food_ramen_01.png) 1700px 700px/8%
               no-repeat,
             url(./../../../public/03-shop-img/food_pizza_01.png) 750px 80px/15%
@@ -687,49 +721,37 @@ $main-border-radius: 8px;
               no-repeat;
     
           .r-shop-home-main {
-            display: flex;
             .r-shop-home-main-inner {
-              display: flex;
-              align-items: center;
+
               .r-shop-home-main-text {
                 width: 40%;
                 margin-left: auto;
                 p {
                   font-size: 48px;
-                  font-weight: 700;
-                  letter-spacing: 0.2rem;
                   line-height: 3.5rem;
                   padding-bottom: 20px;
                 }
                 span {
                   font-size: 24px;
-                  font-weight: 700;
-                  letter-spacing: 0.2rem;
-                  color: $main-text;
                 }
               }
               .r-shop-home-main-btn {
-                display: flex;
                 justify-content: center;
-                align-items: center;
                 height: 60px;
-                border: 3px solid #000;
+                border: $border-lg;
                 border-radius: 15px;
                 margin-top: 80px;
-                box-shadow: 10px 5px 0 #333;
+                padding: 4 24px;
+                box-shadow: 10px 5px 0 $main-Blue;
                 input {
                   font-size: 20px;
-                  border: none;
                   margin-right: 5px;
                 }
                 input:focus {
-                  outline-style: none;
                 }
                 a {
-                  text-decoration: none;
                   i {
                     font-size: 24px;
-                    color: $main-blue;
                   }
                 }
               }
@@ -746,6 +768,9 @@ $main-border-radius: 8px;
     }
 
     .y-section-merch {
+      max-width: 360px;
+      overflow: hidden;
+
       .r-shop-home-carousel {
         .r-wave-section {
           width: 100%;
@@ -1092,27 +1117,21 @@ $main-border-radius: 8px;
     }
 
     .y-section-forum {
+      padding: 40px;
       .y-section-forum-title {
         margin-bottom: 40px;
 
         p {
           font-size: 36px;
-          font-weight: bold;
           letter-spacing: 4px;
-          color: $main-text;
-          text-align: center;
         }
       }
 
       .y-section-forum-wrap {
-        // outline: 1px solid #333;
         max-width: 1320px;
-        margin: 0 auto;
         padding: 20px;
         display: flex;
-        justify-content: space-between;
         .y-forum-row-wrap {
-          width: 100%;
           padding: 15px;
           // outline: 1px solid red;
           .y-forum-card-wrap {
@@ -1132,7 +1151,8 @@ $main-border-radius: 8px;
 
       .y-forum-more-wrap {
         .y-forum-more-btn {
-
+          padding: 10px 15px;
+          width: 180px;
           .y-forum-more-icon {
             
             img {
