edit styles for Wavs/ Modal

--- a/src/00-homepage/styles/TopCarousel.scss
+++ b/src/00-homepage/styles/TopCarousel.scss
@@ -30,7 +30,7 @@ $border-radius-button: 8px;
 
 .y-top-carousel-container{
     border: $border-lg;
-
+    overflow: hidden;
     .slick-prev,
     .slick-next
     {
