--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -83,6 +83,7 @@ $border-radius-button: 8px;
 
 @media (min-width:391px) {
     .y-section-nav {
+        max-width: 1920px;
         height: 90px;
         padding: 0 40px;
     
