--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -5,14 +5,14 @@
   min-height: 100vh;
   // border: 1px solid red;
   background-color: rgba(83,83,83,75%); 
-  border-radius: 10px 10px 6px 6px;
-  overflow: hidden;
 
   .modal-dialog {
     // border: 1px solid green;
     width: 500px;
     // height: 200px;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+    // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: 5px 5px 0 #113f75;
+    overflow: hidden;
     border-radius: 10px 10px 6px 6px;
     .modal-content {
       padding-bottom: 10px;
@@ -23,6 +23,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
+      border-radius: 10px 10px 6px 6px;
       // position: relative;
       .modal-header {
         border-bottom: 3px solid #113f75;
